--- a/Proyecto Final/pages/about-us.html
+++ b/Proyecto Final/pages/about-us.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Font Begin-->
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,106 +24,157 @@
 
     <!-- Google Font End-->
 
+
     <!-- Agregar el CSS -->
-    <link rel="stylesheet" href="../css/estilos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- 
+    <link rel="stylesheet" href="../css/estilos.css">
+-->
+
+<link rel="stylesheet" href="../css//styles.css">
 
     <title>Fincas del Faldeo | Nosotros</title>
   </head>
   <body>
 
-
-    <div class="about-us-container">
-
-      <header class="header-section">
-        <div class="logo">
-          <a href="../index.html">
-            <img src="../img/logo.jpg" alt="Fincas del faldeo" />
-          </a>
-        </div>
-        <nav>
-          <ul>
-            <li class="menu-lista">
-              <a class="menu-link" href="../index.html">Home</a>
+    <!------- HEADER BEGIND---------->
+    <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
+      <div class="container-fluid ">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../img/logo.jpg" alt="Fincas del faldeo" />
+          <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav menu-lista ">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
-            <li class="menu-lista">
-              <a class="menu-link" href="rooms.html">Las Fincas</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./rooms.html">Las Fincas</a>
             </li>
-            <li class="menu-lista">
-              <a class="menu-link" href="galery.html">Postales</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./galery.html">Postales</a>
             </li>
-            <li class="menu-lista">
-              <a class="menu-link" href="place.html">El Lugar</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./place.html">El Lugar</a>
             </li>
-            <li class="menu-lista">
-              <a class="menu-link" href="about-us.html">Nosotros</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./about-us.html">Nosotros</a>
             </li>
-            <li class="menu-lista">
-              <a class="menu-link" href="contact.html">Contacto</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html">Contacto</a>
             </li>
           </ul>
-        </nav>
-        <div class="logo-ubicacion">
-          <img src="../img/placeholder.png" alt="Ubicación" />
-          <p>Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
-          Córdoba</p>
         </div>
-      </header>
+        <a class="navbar-brand header-nav-logo" >
+          <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
+            Córdoba
 
-      <section class="about-us-section-title">
+        </a>
+      </div>
+    </nav>
+    <!------- HEADER END---------->
+
+    <!------- MAIN BEGIND---------->
+    <main class="container">
+      <div class="row mt-5">
         <h3 class="titulo-about-us">Fincas del Faldeo Casas de Montaña</h3>
-   
-      </section>
-
-     <section class="about-us-description-col-1">
-       <p>
-         Fincas del Faldeo es un proyecto familiar soñado por muchos años y
-         que hoy se convierte en realidad para brindar lo que más nos gusta.
-         En un entorno natural, al pie del Cerro de la Virgen y con una
-         increíble vista a las Altas Cumbres, se ubican nuestras fincas, con
-         gran variedad de flora y fauna, que invita a relajarse y conectarse
-         con la naturaleza que tan bien no hace.
-       </p>
-     </section>
-
-     <section class="about-us-description-col-2">
-       <p>
-         Muchos de nuestros huéspedes, comentan como “imperdibles” el hecho
-         de desayunar mirando hacia el Cerro Champaquí o disfrutar la piscina
-         escuchando el canto de los pájaros, recibir algunas visitas de
-         zorros que vienen a saludar o vivir la experiencia inolvidable de
-         observar un hermoso cielo estrellado al pie de las sierras.
-       </p>
-     </section>
-
-     <footer class="footer-section">
-      <h3 class="titulo-footer">Fincas del Faldeo</h3>
-
-      <div class="footer-section-info-panel">
-          <h4>Ubicación</h4>
-          <br />
-          <img src="../img/placeholder.png" alt="Ubicación" />
-          <p class="texto-footer">
-              Ruta Prov. N° 5 KM 78.3,
-              <br />
-              Vila General Belgrano, Córdoba, Argentina
+      </div>
+      <div class="row">
+        <br>
+        <br>
+      </div>
+      <div class="row">
+        <div class="col about-us-description-col">
+          <p>
+            Fincas del Faldeo es un proyecto familiar soñado por muchos años y
+            que hoy se convierte en realidad para brindar lo que más nos gusta.
+            En un entorno natural, al pie del Cerro de la Virgen y con una
+            increíble vista a las Altas Cumbres, se ubican nuestras fincas, con
+            gran variedad de flora y fauna, que invita a relajarse y conectarse
+            con la naturaleza que tan bien no hace.
           </p>
+        </div>
+        <div class="col about-us-description-col">
+          <p>
+            Muchos de nuestros huéspedes, comentan como “imperdibles” el hecho
+            de desayunar mirando hacia el Cerro Champaquí o disfrutar la piscina
+            escuchando el canto de los pájaros, recibir algunas visitas de
+            zorros que vienen a saludar o vivir la experiencia inolvidable de
+            observar un hermoso cielo estrellado al pie de las sierras.
+          </p>
+        </div>
       </div>
-      <div class="footer-section-info-panel">
-          <h4>Recepción</h4>
-          <br />
-          <i class="lnr lnr-phone-handset"></i>
-          <img src="../img/phone.png" alt="Teléfono" />
-          <p class="texto-footer">+54 (11) 4444 - 5555</p>
-      </div>
-      <div class="footer-section-info-panel">
-          <h4>Encargado</h4>
-          <br />
-          <img src="../img/phone.png" alt="Teléfono" />
-          <p class="texto-footer">+54 (11) 4444 - 6666</p>
-      </div>
-     </footer>
 
-    </div>
+    </main>
+    <!------- MAIN END---------->
+
+    <!------- FOOTER BEGIND---------->
+    <footer class="page-footer bottom-0 font-small bg-dark">
+
+      <!-- Footer Links -->
+      <div class="container text-center text-md-left mt-5">
+
+        <!-- Grid row -->
+        <div class="row mt-3">
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <br>
+            <br>
+            <h4 class="titulo-footer">Ubicación</h4>
+            <br />
+            <img src="../img/placeholder.png" alt="Ubicación" />
+            <br>
+            <p class="texto-footer">
+                Ruta Prov. N° 5 KM 78.3,
+                <br />
+                Vila General Belgrano, Córdoba, Argentina
+            </p>
+
+          </div>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <br>
+            <br>
+            <h4 class="titulo-footer">Recepción</h4>
+            <br />
+            <i class="lnr lnr-phone-handset"></i>
+            <img src="../img/phone.png" alt="Teléfono" />
+            <br>
+            <p class="texto-footer">+54 (11) 4444 - 5555</p>
+
+          </div>
+
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <br>
+            <br>
+            <h4 class="titulo-footer">Encargado</h4>
+            <br />
+            <img src="../img/phone.png" alt="Teléfono" />
+            <br>
+            <p class="texto-footer">+54 (11) 4444 - 6666</p>
+
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+      </div>
+      <!-- Footer Links -->
+
+
+    </footer>
+    <!------- FOOTER END---------->
+   
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+
 
   </body>
 </html>
