--- a/Proyecto Final/pages/about-us.html
+++ b/Proyecto Final/pages/about-us.html
@@ -81,7 +81,7 @@
     <!------- MAIN BEGIND---------->
     <main class="container">
       <div class="row mt-5">
-        <h3 class="titulo-about-us">Fincas del Faldeo Casas de Montaña</h3>
+        <h3 class="titulo-about-us titulo-animado">Fincas del Faldeo Casas de Montaña</h3>
       </div>
       <div class="row">
         <br>
