--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -40,7 +40,7 @@
       <!------- HEADER BEGIND---------->
       <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid ">
-          <a class="navbar-brand" href="./index.html">
+          <a class="navbar-brand logo" href="./index.html">
             <img src="./img/logo.jpg" alt="Fincas del faldeo" />
             <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
           </a>
@@ -69,7 +69,7 @@
               </li>
             </ul>
           </div>
-          <a class="navbar-brand header-nav-logo" >
+          <a class="navbar-brand header-nav-logo logo-ubicacion" >
             <img src="./img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
               Córdoba
   
@@ -82,7 +82,7 @@
       <main class="container">
 
         <div class="card text-white">
-          <img src="img/home/FincasDelFaldeo-1.jpg" class="card-img" alt="Fincas del Faldeo">
+          <img src="./img/home/FincasDelFaldeo-1.jpg" class="card-img" alt="Fincas del Faldeo">
           <div class="card-img-overlay">
 
           </div>
@@ -199,9 +199,19 @@
             <br>
             <h2>SOCIAL MEDIA</h2>
             <br>
+
+            <a href="https://www.facebook.com/fincas.delfaldeo/">
+              <img src="./img/ico/icons8-facebook-100.png" alt="">
+            </a>
+            <a href="https://www.instagram.com/fincasdelfaldeo/">
+              <img src="./img/ico/icons8-instagram-100.png" alt="">
+            </a>
+
             <br>
-            <p>@fincasdelfaldeo</p>
+            <br>
+
           </div>
+          
         </div>
         <div class="row" >
           <div class="col">
