--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- SEO -->
+
+    <meta name="description" content="Casas de montaña. Un lugar donde la naturaleza y la paz se encuentran.">
+    <meta name="keywords"  content="Cabañas, VGB, Villa General Belgrano, Alojamiento, Hotel, Cabaña, Córdoba, Montañas, Cerros">
+
+
     <!-- Google Font Begin-->
 
 
@@ -78,8 +84,6 @@
           </div>
         </nav>
       </header>
-
-
       <!------- HEADER END---------->
 
       <!------- MAIN BEGIND---------->
@@ -99,7 +103,7 @@
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="card-title justify-content-center">Desayuno</h5>
+                    <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Desayuno</h5>
                     <p class="card-text">Desayuno opcional con diversas infusiones y acompañamientos caseros variados día a día.</p>
                   </div>
                 </div>
@@ -118,7 +122,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="card-title justify-content-center">Espacios Verdes</h5>
+                    <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Espacios Verdes</h5>
                     <p class="card-text">Las Fincas se ubican al pie del Cerro de la Virgen en un predio de 3915m2, rodeadas de gran variedad de flora y fauna.</p>
                   </div>
                 </div>
@@ -136,7 +140,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="card-title justify-content-center">Piscina</h5>
+                    <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Piscina</h5>
                     <p class="card-text">Amplia piscina de 10mts de largo x 3.60mts de ancho, solarium y hermosa vista a las Altas Cumbres</p>
                   </div>
                 </div>
@@ -149,7 +153,7 @@
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="card-title justify-content-center">Free High Wi-Fi</h5>
+                    <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Free High Wi-Fi</h5>
                     <p class="card-text">Wifi gratis dentro de las fincas y en el predio.</p>
                   </div>
                 </div>
@@ -169,7 +173,7 @@
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="card-title justify-content-center">Servicio de Limpieza</h5>
+                    <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Servicio de Limpieza</h5>
                     <p class="card-text">Servicio diario de recambio de ropa de cama y limpieza.</p>
                   </div>
                 </div>
@@ -188,7 +192,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="card-title justify-content-center">Asesoramiento</h5>
+                    <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Guía</h5>
                     <p class="card-text">Nuestro personal capacitado podrá informarle el funcionamiento de los elementos, así como atractivos turisticos y accesos.</p>
                   </div>
                 </div>
