--- a/Proyecto Final/pages/about-us.html
+++ b/Proyecto Final/pages/about-us.html
@@ -38,57 +38,59 @@
   <body>
 
     <!------- HEADER BEGIND---------->
-    <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
-      <div class="container-fluid ">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../img/logo.jpg" alt="Fincas del faldeo" />
-          <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav menu-lista ">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./rooms.html">Las Fincas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./galery.html">Postales</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./place.html">El Lugar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about-us.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contacto</a>
-            </li>
-          </ul>
+    <header>
+      <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../img/logo.jpg" alt="Fincas del faldeo" />
+            <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav menu-lista ">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./rooms.html">Las Fincas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./galery.html">Postales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./place.html">El Lugar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./about-us.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+          <a class="navbar-brand header-nav-logo" >
+            <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
+              Córdoba
+  
+          </a>
         </div>
-        <a class="navbar-brand header-nav-logo" >
-          <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
-            Córdoba
-
-        </a>
-      </div>
-    </nav>
+      </nav>
+    </header>
     <!------- HEADER END---------->
 
     <!------- MAIN BEGIND---------->
     <main class="container">
       <div class="row mt-5">
-        <h3 class="titulo-about-us titulo-animado">Fincas del Faldeo Casas de Montaña</h3>
+        <h3 class="titulo-about-us titulo-animado font-julius-sans-one size-48">Fincas del Faldeo Casas de Montaña</h3>
       </div>
       <div class="row">
         <br>
         <br>
       </div>
       <div class="row">
-        <div class="col about-us-description-col">
+        <div class="col about-us-description-col font-zen-kurenaido size-20">
           <p>
             Fincas del Faldeo es un proyecto familiar soñado por muchos años y
             que hoy se convierte en realidad para brindar lo que más nos gusta.
@@ -98,7 +100,7 @@
             con la naturaleza que tan bien no hace.
           </p>
         </div>
-        <div class="col about-us-description-col">
+        <div class="col about-us-description-col font-zen-kurenaido size-20">
           <p>
             Muchos de nuestros huéspedes, comentan como “imperdibles” el hecho
             de desayunar mirando hacia el Cerro Champaquí o disfrutar la piscina
@@ -108,7 +110,10 @@
           </p>
         </div>
       </div>
-
+      <div class="row">
+        <br>
+        <br>
+      </div>
     </main>
     <!------- MAIN END---------->
 
