--- a/Proyecto Final/pages/place.html
+++ b/Proyecto Final/pages/place.html
@@ -38,44 +38,47 @@
 
 
       <!------- HEADER BEGIND---------->
-      <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
-        <div class="container-fluid ">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../img/logo.jpg" alt="Fincas del faldeo" />
-            <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav menu-lista ">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./rooms.html">Las Fincas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./galery.html">Postales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./place.html">El Lugar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about-us.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contacto</a>
-              </li>
-            </ul>
+      <header>
+        <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
+          <div class="container-fluid ">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../img/logo.jpg" alt="Fincas del faldeo" />
+              <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav menu-lista ">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./rooms.html">Las Fincas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./galery.html">Postales</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./place.html">El Lugar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about-us.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+            <a class="navbar-brand header-nav-logo" >
+              <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
+                Córdoba
+    
+            </a>
           </div>
-          <a class="navbar-brand header-nav-logo" >
-            <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
-              Córdoba
-  
-          </a>
-        </div>
-      </nav>
+        </nav>
+      </header>
+
       <!------- HEADER END---------->
 
     <!------- MAIN BEGIND---------->
@@ -136,7 +139,7 @@
           <br>
         </div>
         <div class="col-12 pt-30 ml-10 mr-10">
-            <p class="place-description">
+            <p class="place-description font-zen-kurenaido size-20">
                 Villa General Belgrano es una localidad situada en el departamento de Calamuchita, en la provincia de Córdoba, Argentina; a 90 km al sur de la capital provincial. Está ubicada en el Valle de Calamuchita, rodeada de sierras, 9 km al norte de Santa Rosa de Calamuchita, y a 35 km también al norte de la ciudad de Embalse.
 
                 Se trata de una pequeña ciudad con arquitectura típicamente bávara, surgida de sus primeros pobladores: inmigrantes alemanes (127 familias, que convirtieron a Villa General Belgrano en la mayor colonia alemana en toda Argentina), suizos (34 familias), italianos (25 familias) y austriacos (19 familias), que hicieron del lugar una referencia arquitectónica y turística de tradición alemana en la Argentina.
