--- a/Proyecto Final/pages/galery.html
+++ b/Proyecto Final/pages/galery.html
@@ -33,49 +33,52 @@
 
 <link rel="stylesheet" href="../css//styles.css">
 
-    <title>Fincas del Faldeo</title>
+    <title>Fincas del Faldeo | Postales</title>
 </head>
 <body>
 
       <!------- HEADER BEGIND---------->
-      <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
-        <div class="container-fluid ">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../img/logo.jpg" alt="Fincas del faldeo" />
-            <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav menu-lista ">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./rooms.html">Las Fincas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./galery.html">Postales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./place.html">El Lugar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about-us.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contacto</a>
-              </li>
-            </ul>
+      <header>
+        <nav class="navbar  navbar-expand-lg navbar-dark bg-dark ">
+          <div class="container-fluid ">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../img/logo.jpg" alt="Fincas del faldeo" />
+              <h2 class="header-nav-logo-h2">Fincas del Faldeo</h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav menu-lista ">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./rooms.html">Las Fincas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./galery.html">Postales</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./place.html">El Lugar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about-us.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+            <a class="navbar-brand header-nav-logo" >
+              <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
+                Córdoba
+    
+            </a>
           </div>
-          <a class="navbar-brand header-nav-logo" >
-            <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
-              Córdoba
-  
-          </a>
-        </div>
-      </nav>
+        </nav>
+      </header>
+
       <!------- HEADER END---------->
 
       <!------- MAIN BEGIND---------->
