--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -30,6 +30,9 @@
 
     <!-- Google Font End-->
 
+    <!-- Favicon Begin -->
+    <link rel="icon" href="./img/ico/favicon.png">
+    <!-- Favicon End -->
 
     <!-- Agregar el CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -38,7 +41,7 @@
 
     <link rel="stylesheet" href="./css/styles-whatsapp.css">
 
-    
+
     <title>Fincas del Faldeo</title>
 </head>
 <body>
@@ -80,7 +83,8 @@
                 </li>
               </ul>
             </div>
-            <a class="navbar-brand header-nav-logo logo-ubicacion" >
+            <a class="navbar-brand header-nav-logo" href="https://www.google.com/maps/place/Fincas+del+Faldeo/@-31.981048,-64.548669,16z/data=!4m8!3m7!1s0x0:0x1a44dd57c65466d3!5m2!4m1!1i2!8m2!3d-31.9810477!4d-64.5486688?hl=es-419" target="_blank">
+
               <img src="./img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
                 Córdoba
     
@@ -95,9 +99,6 @@
 
         <div class="card text-white">
           <img src="./img/home/FincasDelFaldeo-1.jpg" class="card-img" alt="Fincas del Faldeo">
-          <div class="card-img-overlay">
-
-          </div>
         </div>
 
 
@@ -112,7 +113,7 @@
                   </div>
                 </div>
                 <div class="col-md-8">
-                  <img src="./img/comodities/desayuno.jpg" class="card-img" alt="...">
+                  <img src="./img/comodities/desayuno.jpg" class="card-img" alt="Desayuno">
                 </div>
   
               </div>
@@ -122,7 +123,7 @@
             <div class="card mb-3" style="max-width: 740px;">
               <div class="row no-gutters">
                 <div class="col-md-8">
-                  <img src="./img/comodities/espacios-verdes.jpg" class="card-img" alt="...">
+                  <img src="./img/comodities/espacios-verdes.jpg" class="card-img" alt="Espacios verdes">
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
@@ -140,12 +141,12 @@
             <div class="card mb-3" style="max-width: 740px;">
               <div class="row no-gutters">
                 <div class="col-md-8">
-                  <img src="./img/comodities/piscina.JPG" class="card-img" alt="...">
+                  <img src="./img/comodities/piscina.JPG" class="card-img" alt="Piscina">
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
                     <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Piscina</h5>
-                    <p class="card-text">Amplia piscina de 10mts de largo x 3.60mts de ancho, solarium y hermosa vista a las Altas Cumbres</p>
+                    <p class="card-text">Amplia piscina de 10mts de largo x 3.60mts de ancho, solárium y hermosa vista a las Altas Cumbres</p>
                   </div>
                 </div>
               </div>
@@ -162,7 +163,7 @@
                   </div>
                 </div>
                 <div class="col-md-8">
-                  <img src="./img/comodities/wifi.jpg" class="card-img" alt="...">
+                  <img src="./img/comodities/wifi.jpg" class="card-img" alt="wifi">
                 </div>
   
               </div>
@@ -182,7 +183,7 @@
                   </div>
                 </div>
                 <div class="col-md-8">
-                  <img src="./img/comodities/limpieza.jpg" class="card-img" alt="...">
+                  <img src="./img/comodities/limpieza.jpg" class="card-img" alt="Servicio de limpieza">
                 </div>
   
               </div>
@@ -192,12 +193,12 @@
             <div class="card mb-3" style="max-width: 740px;">
               <div class="row no-gutters">
                 <div class="col-md-8">
-                  <img src="./img/comodities/asesoramiento.jpg" class="card-img" alt="...">
+                  <img src="./img/comodities/asesoramiento.jpg" class="card-img" alt="Asesoramiento">
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
                     <h5 class="card-title justify-content-center font-zen-kurenaido size-35">Guía</h5>
-                    <p class="card-text">Nuestro personal capacitado podrá informarle el funcionamiento de los elementos, así como atractivos turisticos y accesos.</p>
+                    <p class="card-text">Nuestro personal capacitado podrá informarle el funcionamiento de los elementos, así como atractivos turísticos y accesos.</p>
                   </div>
                 </div>
               </div>
@@ -212,11 +213,11 @@
             <h2>SOCIAL MEDIA</h2>
             <br>
             <div>
-              <a href="https://www.facebook.com/fincas.delfaldeo/">
-                <img src="./img/ico/icons8-facebook-100.png" alt="">
+              <a href="https://www.facebook.com/fincas.delfaldeo/" target="_blank">
+                <img src="./img/ico/icons8-facebook-100.png" alt="Facebook">
               </a>
-              <a href="https://www.instagram.com/fincasdelfaldeo/">
-                <img src="./img/ico/icons8-instagram-100.png" alt="">
+              <a href="https://www.instagram.com/fincasdelfaldeo/" target="_blank">
+                <img src="./img/ico/icons8-instagram-100.png" alt="Instagram">
               </a>
             </div>
 
@@ -233,11 +234,11 @@
               <div class="row no-gutters">
                 <div class="col-md-8">
                   <div class="card-body">
-                    <p class="card-text">"Increible ubicacion y vistas. Una pileta para disfrutar en un entorno fabuloso. Sumamente recomendable. A pocas cuadras del centro, como para ir caminando. En medio de la montaña, un lugar único."</p>
+                    <p class="card-text">"Increíble ubicación y vistas. Una pileta para disfrutar en un entorno fabuloso. Sumamente recomendable. A pocas cuadras del centro, como para ir caminando. En medio de la montaña, un lugar único."</p>
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <img src="./img/testimonial/author-1.jpg" class="card-img" alt="...">
+                  <img src="./img/testimonial/author-1.jpg" class="card-img" alt="Persona1">
                 </div>
   
               </div>
@@ -247,11 +248,11 @@
             <div class="card mb-3" style="max-width: 740px;">
               <div class="row no-gutters">
                 <div class="col-md-4">
-                  <img src="./img/testimonial/author-2.jpg" class="card-img" alt="...">
+                  <img src="./img/testimonial/author-2.jpg" class="card-img" alt="Persona2">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <p class="card-text">"Fincas nos encantó, quedamos felices!!!! Sin dudas recomendariamos el lugar y volveriamos."</p>
+                    <p class="card-text">"Fincas nos encantó, quedamos felices!!!! Sin dudas recomendaríamos el lugar y volveríamos"</p>
                   </div>
                 </div>
               </div>
@@ -266,8 +267,6 @@
       <!------- MAIN END---------->
 
 
-
-
     <!------- FOOTER BEGIND---------->
     <footer class="page-footer bottom-0 font-small bg-dark">
 
@@ -278,40 +277,29 @@
         <div class="row mt-3">
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-5">
             <h4 class="titulo-footer">Ubicación</h4>
-            <br />
+
             <img src="./img/placeholder.png" alt="Ubicación" />
-            <br>
-            <p class="texto-footer">
+            <p class="texto-footer mt-2">
                 Ruta Prov. N° 5 KM 78.3,
                 <br />
                 Vila General Belgrano, Córdoba, Argentina
             </p>
 
           </div>
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-5">
             <h4 class="titulo-footer">Recepción</h4>
-            <br />
             <i class="lnr lnr-phone-handset"></i>
             <img src="./img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 5555</p>
+            <p class="texto-footer mt-2">+54 (11) 4444 - 5555</p>
 
           </div>
 
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-5">
             <h4 class="titulo-footer">Encargado</h4>
-            <br />
             <img src="./img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 6666</p>
+            <p class="texto-footer mt-2">+54 (11) 4444 - 6666</p>
 
           </div>
           <!-- Grid column -->
