--- a/Proyecto Final/pages/about-us.html
+++ b/Proyecto Final/pages/about-us.html
@@ -29,6 +29,10 @@
 
     <!-- Google Font End-->
 
+    <!-- Favicon Begin -->
+    <link rel="icon" href="../img/ico/favicon.png">
+    <!-- Favicon End -->
+    
 
     <!-- Agregar el CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -74,7 +78,7 @@
               </li>
             </ul>
           </div>
-          <a class="navbar-brand header-nav-logo" >
+          <a class="navbar-brand header-nav-logo" href="https://www.google.com/maps/place/Fincas+del+Faldeo/@-31.981048,-64.548669,16z/data=!4m8!3m7!1s0x0:0x1a44dd57c65466d3!5m2!4m1!1i2!8m2!3d-31.9810477!4d-64.5486688?hl=es-419" target="_blank">
             <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
               Córdoba
   
@@ -86,25 +90,26 @@
 
     <!------- MAIN BEGIND---------->
     <main class="container">
+      <div class="row">
+        <div class="col-12">
+          <img src="../img/bg/about-us-bg-2.jpg" class="card-img" alt="Fincas del Faldeo">
+        </div>
+      </div>
       <div class="row mt-5">
-        <h3 class="titulo-about-us titulo-animado font-julius-sans-one size-48">Fincas del Faldeo Casas de Montaña</h3>
+        <h3 class="titulo-about-us titulo-animado font-julius-sans-one size-48 ">Fincas del Faldeo Casas de Montaña</h3>
       </div>
       <div class="row">
-        <br>
-        <br>
-      </div>
-      <div class="row">
-        <div class="col about-us-description-col font-zen-kurenaido size-20">
+        <div class="col about-us-description-col font-zen-kurenaido size-25">
           <p>
             Fincas del Faldeo es un proyecto familiar soñado por muchos años y
             que hoy se convierte en realidad para brindar lo que más nos gusta.
-            En un entorno natural, al pie del Cerro de la Virgen y con una
+            En un entorno natural al pie del Cerro de la Virgen y con una
             increíble vista a las Altas Cumbres, se ubican nuestras fincas, con
-            gran variedad de flora y fauna, que invita a relajarse y conectarse
-            con la naturaleza que tan bien no hace.
+            gran variedad de flora y fauna que invita a relajarse y conectarse
+            con la naturaleza que tan bien nos hace.
           </p>
         </div>
-        <div class="col about-us-description-col font-zen-kurenaido size-20">
+        <div class="col about-us-description-col font-zen-kurenaido size-25">
           <p>
             Muchos de nuestros huéspedes, comentan como “imperdibles” el hecho
             de desayunar mirando hacia el Cerro Champaquí o disfrutar la piscina
@@ -113,10 +118,6 @@
             observar un hermoso cielo estrellado al pie de las sierras.
           </p>
         </div>
-      </div>
-      <div class="row">
-        <br>
-        <br>
       </div>
 
       <!------- whatsapp ---------->  
@@ -128,7 +129,7 @@
     <!------- MAIN END---------->
 
     <!------- FOOTER BEGIND---------->
-    <footer class="page-footer bottom-0 font-small bg-dark">
+    <footer class="page-footer bottom-0 font-small bg-dark mb-0">
 
       <!-- Footer Links -->
       <div class="container text-center text-md-left mt-5">
@@ -137,40 +138,28 @@
         <div class="row mt-3">
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-5">
             <h4 class="titulo-footer">Ubicación</h4>
-            <br />
             <img src="../img/placeholder.png" alt="Ubicación" />
-            <br>
-            <p class="texto-footer">
+            <p class="texto-footer mt-2">
                 Ruta Prov. N° 5 KM 78.3,
                 <br />
                 Vila General Belgrano, Córdoba, Argentina
             </p>
 
           </div>
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4  mt-5">
             <h4 class="titulo-footer">Recepción</h4>
-            <br />
             <i class="lnr lnr-phone-handset"></i>
             <img src="../img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 5555</p>
+            <p class="texto-footer  mt-2">+54 (11) 4444 - 5555</p>
 
           </div>
 
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4  mt-5">
             <h4 class="titulo-footer">Encargado</h4>
-            <br />
             <img src="../img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 6666</p>
+            <p class="texto-footer mt-2">+54 (11) 4444 - 6666</p>
 
           </div>
           <!-- Grid column -->
