--- a/Proyecto Final/pages/galery.html
+++ b/Proyecto Final/pages/galery.html
@@ -29,6 +29,9 @@
 
     <!-- Google Font End-->
 
+    <!-- Favicon Begin -->
+    <link rel="icon" href="../img/ico/favicon.png">
+    <!-- Favicon End -->
 
     <!-- Agregar el CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -74,7 +77,7 @@
                 </li>
               </ul>
             </div>
-            <a class="navbar-brand header-nav-logo" >
+            <a class="navbar-brand header-nav-logo" href="https://www.google.com/maps/place/Fincas+del+Faldeo/@-31.981048,-64.548669,16z/data=!4m8!3m7!1s0x0:0x1a44dd57c65466d3!5m2!4m1!1i2!8m2!3d-31.9810477!4d-64.5486688?hl=es-419" target="_blank">
               <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
                 Córdoba
     
@@ -106,36 +109,72 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="../img/galery/FincasdelFaldeo (0).jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="../img/galery/FincasdelFaldeo (1).jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="../img/galery/FincasdelFaldeo (2).jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="../img/galery/FincasdelFaldeo (3).jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="../img/galery/FincasdelFaldeo (4).jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="../img/galery/FincasdelFaldeo (5).jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="../img/galery/FincasdelFaldeo (6).jpg" class="d-block w-100" alt="...">
-                </div>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14" aria-label="Slide 15"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="15" aria-label="Slide 16"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="16" aria-label="Slide 17"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="17" aria-label="Slide 18"></button>
 
-                  <div class="carousel-item">
-                    <img src="../img/galery/FincasdelFaldeo (8).jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../img/galery/FincasdelFaldeo (9).jpg" class="d-block w-100" alt="...">
-                  </div>
+              </div>
+              <div class="carousel-inner galery-images">
+                <div class="carousel-item active">
+                  <img src="../img/galery/FincasDelFaldeo(0M).jpg" class="d-block w-100" alt="Fincas del Faldeo 1">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(1M).jpg" class="d-block w-100" alt="Fincas del Faldeo 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(2M).jpg" class="d-block w-100" alt="Fincas del Faldeo 3">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(3M).jpg" class="d-block w-100" alt="Fincas del Faldeo 4">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(4M).jpg" class="d-block w-100" alt="Fincas del Faldeo 5">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(5M).jpg" class="d-block w-100" alt="Fincas del Faldeo 6">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(6M).jpg" class="d-block w-100" alt="Fincas del Faldeo 7">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(8M).jpg" class="d-block w-100" alt="Fincas del Faldeo 8">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(9M).jpg" class="d-block w-100" alt="Fincas del Faldeo 9">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(10M).jpg" class="d-block w-100" alt="Fincas del Faldeo 10">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(11M).jpg" class="d-block w-100" alt="Fincas del Faldeo 11">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(12M).jpg" class="d-block w-100" alt="Fincas del Faldeo 12">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(13M).jpg" class="d-block w-100" alt="Fincas del Faldeo 13">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(14M).jpg" class="d-block w-100" alt="Fincas del Faldeo 14">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(15M).jpg" class="d-block w-100" alt="Fincas del Faldeo 15">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(16M).jpg" class="d-block w-100" alt="Fincas del Faldeo 16">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(17M).jpg" class="d-block w-100" alt="Fincas del Faldeo 17">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/galery/FincasDelFaldeo(18M).jpg" class="d-block w-100" alt="Fincas del Faldeo 18">
+                </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -148,10 +187,6 @@
             </div>
           </div>
           <div class="col"></div>
-          <div>
-            <br>
-            <br>
-          </div>
 
         </div>
   
@@ -168,7 +203,7 @@
 
 
     <!------- FOOTER BEGIND---------->
-    <footer class="page-footer bottom-0 font-small bg-dark">
+    <footer class="page-footer bottom-0 font-small bg-dark mb-0">
 
       <!-- Footer Links -->
       <div class="container text-center text-md-left mt-5">
@@ -177,40 +212,28 @@
         <div class="row mt-3">
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-5">
             <h4 class="titulo-footer">Ubicación</h4>
-            <br />
             <img src="../img/placeholder.png" alt="Ubicación" />
-            <br>
-            <p class="texto-footer">
+            <p class="texto-footer mt-2">
                 Ruta Prov. N° 5 KM 78.3,
                 <br />
                 Vila General Belgrano, Córdoba, Argentina
             </p>
 
           </div>
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4  mt-5">
             <h4 class="titulo-footer">Recepción</h4>
-            <br />
             <i class="lnr lnr-phone-handset"></i>
             <img src="../img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 5555</p>
+            <p class="texto-footer  mt-2">+54 (11) 4444 - 5555</p>
 
           </div>
 
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4  mt-5">
             <h4 class="titulo-footer">Encargado</h4>
-            <br />
             <img src="../img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 6666</p>
+            <p class="texto-footer mt-2">+54 (11) 4444 - 6666</p>
 
           </div>
           <!-- Grid column -->
