--- a/Proyecto Final/pages/place.html
+++ b/Proyecto Final/pages/place.html
@@ -28,6 +28,9 @@
 
     <!-- Google Font End-->
 
+    <!-- Favicon Begin -->
+    <link rel="icon" href="../img/ico/favicon.png">
+    <!-- Favicon End -->
 
     <!-- Agregar el CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -75,7 +78,8 @@
                 </li>
               </ul>
             </div>
-            <a class="navbar-brand header-nav-logo" >
+            <a class="navbar-brand header-nav-logo" href="https://www.google.com/maps/place/Fincas+del+Faldeo/@-31.981048,-64.548669,16z/data=!4m8!3m7!1s0x0:0x1a44dd57c65466d3!5m2!4m1!1i2!8m2!3d-31.9810477!4d-64.5486688?hl=es-419" target="_blank">
+
               <img src="../img/placeholder.png" alt="Ubicación" /> <br> Ruta Prov. N° 5 KM 78.3, <br> Vila General Belgrano, <br>
                 Córdoba
     
@@ -104,29 +108,25 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/place/vgb_1.jpg" class="d-block w-100" alt="...">
+                <img src="../img/place/vgb_1.jpg" class="d-block w-100" alt="Villa General Belgrano 1">
               </div>
               <div class="carousel-item">
-                <img src="../img/place/vgb_2.jpg" class="d-block w-100" alt="...">
+                <img src="../img/place/vgb_2.jpg" class="d-block w-100" alt="Villa General Belgrano 2">
               </div>
               <div class="carousel-item">
-                <img src="../img/place/vgb_3.jpg" class="d-block w-100" alt="...">
+                <img src="../img/place/vgb_4.jpg" class="d-block w-100" alt="Villa General Belgrano 4">
               </div>
               <div class="carousel-item">
-                <img src="../img/place/vgb_4.jpg" class="d-block w-100" alt="...">
+                <img src="../img/place/vgb_5.jpg" class="d-block w-100" alt="Villa General Belgrano 5">
               </div>
               <div class="carousel-item">
-                <img src="../img/place/vgb_5.jpg" class="d-block w-100" alt="...">
+                <img src="../img/place/vgb_6.jpg" class="d-block w-100" alt="Villa General Belgrano 6">
               </div>
               <div class="carousel-item">
-                <img src="../img/place/vgb_6.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/place/vgb_7.jpg" class="d-block w-100" alt="...">
+                <img src="../img/place/vgb_7.jpg" class="d-block w-100" alt="Villa General Belgrano 7">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -145,17 +145,8 @@
           <br>
         </div>
         <div class="col-12 pt-30 ml-10 mr-10">
-           <!--
             <p class="place-description font-zen-kurenaido size-20">
-                Villa General Belgrano es una localidad situada en el departamento de Calamuchita, en la provincia de Córdoba, Argentina; a 90 km al sur de la capital provincial. Está ubicada en el Valle de Calamuchita, rodeada de sierras, 9 km al norte de Santa Rosa de Calamuchita, y a 35 km también al norte de la ciudad de Embalse.
-
-                Se trata de una pequeña ciudad con arquitectura típicamente bávara, surgida de sus primeros pobladores: inmigrantes alemanes (127 familias, que convirtieron a Villa General Belgrano en la mayor colonia alemana en toda Argentina), suizos (34 familias), italianos (25 familias) y austriacos (19 familias), que hicieron del lugar una referencia arquitectónica y turística de tradición alemana en la Argentina.
-                
-                Su entorno es serrano rodeado de bosques (coníferas, hayas, robles etc) con abundantes arroyos. Se accede a la población por la Ruta Provincial 5.
-            </p>
-            -->
-            <p class="place-description font-zen-kurenaido size-20">
-              Villa General Belgrano es una localidad especial, con una interesante historia y amplia oferta cultural, arte, muy buena gastronomía,  paisajes increíbles, y variada oferta hotelera de categoría. Situada en el centro de la  República Argentina, en el departamento de Calamuchita, provincia de Cordoba, a solo 88km al sur de la capital provincial y a 750km de la Capital Federal, enmarcada por los cordones de las Sierras Grandes al oeste; de las Sierras Chicas al este y los Embalses de Los Molinos y de Río Tercero, al norte y sur respectivamente. A solo 9km de la ciudad de Santa Rosa, y a 35km de la ciudad de Embalse. 
+              Villa General Belgrano es una localidad especial, con una interesante historia y amplia oferta cultural, arte, muy buena gastronomía,  paisajes increíbles, y variada oferta hotelera de categoría. Situada en el centro de la  República Argentina, en el departamento de Calamuchita, provincia de Córdoba, a solo 88km al sur de la capital provincial y a 750km de la Capital Federal, enmarcada por los cordones de las Sierras Grandes al oeste; de las Sierras Chicas al este y los Embalses de Los Molinos y de Río Tercero, al norte y sur respectivamente. A solo 9km de la ciudad de Santa Rosa, y a 35km de la ciudad de Embalse. 
               Se trata de un pueblo estilo centroeuropeo, con arquitectura típicamente bávara, esto último debido a sus primeros pobladores, inmigrantes de origen preferentemente alemán; le siguieron otros grupos europeos como suizos, italianos, austriacos, que fueron forjando la identidad, la arquitectura y la tradición en el lugar. 
               Por su privilegiada ubicación, Villa General Belgrano tiene conexión con todo el país, tanto vía aérea, con vuelos diarios al aeropuerto internacional Pajas Blancas, como terrestre con servicios con frecuencia diaria todo el año. Se accede a la población por la Ruta Provincial N°5 donde se encuentra su entrada principal.
             </p>
@@ -172,7 +163,7 @@
     <!------- MAIN END---------->
 
     <!------- FOOTER BEGIND---------->
-    <footer class="page-footer bottom-0 font-small bg-dark">
+    <footer class="page-footer bottom-0 font-small bg-dark mb-0">
 
       <!-- Footer Links -->
       <div class="container text-center text-md-left mt-5">
@@ -181,40 +172,28 @@
         <div class="row mt-3">
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-5">
             <h4 class="titulo-footer">Ubicación</h4>
-            <br />
             <img src="../img/placeholder.png" alt="Ubicación" />
-            <br>
-            <p class="texto-footer">
+            <p class="texto-footer mt-2">
                 Ruta Prov. N° 5 KM 78.3,
                 <br />
                 Vila General Belgrano, Córdoba, Argentina
             </p>
 
           </div>
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4  mt-5">
             <h4 class="titulo-footer">Recepción</h4>
-            <br />
             <i class="lnr lnr-phone-handset"></i>
             <img src="../img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 5555</p>
+            <p class="texto-footer  mt-2">+54 (11) 4444 - 5555</p>
 
           </div>
 
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <br>
-            <br>
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4  mt-5">
             <h4 class="titulo-footer">Encargado</h4>
-            <br />
             <img src="../img/phone.png" alt="Teléfono" />
-            <br>
-            <p class="texto-footer">+54 (11) 4444 - 6666</p>
+            <p class="texto-footer mt-2">+54 (11) 4444 - 6666</p>
 
           </div>
           <!-- Grid column -->
