--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -101,7 +101,6 @@
           <img src="./img/home/FincasDelFaldeo-1.jpg" class="card-img" alt="Fincas del Faldeo">
         </div>
 
-
         <div class="row" >
           <div class="col">
             <div class="card mb-3" style="max-width: 740px;">
@@ -115,7 +114,6 @@
                 <div class="col-md-8">
                   <img src="./img/comodities/desayuno.jpg" class="card-img" alt="Desayuno">
                 </div>
-  
               </div>
             </div>
           </div>
@@ -165,10 +163,8 @@
                 <div class="col-md-8">
                   <img src="./img/comodities/wifi.jpg" class="card-img" alt="wifi">
                 </div>
-  
               </div>
             </div>
-
           </div>
         </div>
 
@@ -185,7 +181,6 @@
                 <div class="col-md-8">
                   <img src="./img/comodities/limpieza.jpg" class="card-img" alt="Servicio de limpieza">
                 </div>
-  
               </div>
             </div>
           </div>
@@ -206,13 +201,10 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-3 mb-3">
           <div class="col text-center">
-            <br>
-            <br>
-            <h2>SOCIAL MEDIA</h2>
-            <br>
-            <div>
+            <h2 class="mt-3 mb-3">SOCIAL MEDIA</h2>
+            <div class="mt-3 mb-3">
               <a href="https://www.facebook.com/fincas.delfaldeo/" target="_blank">
                 <img src="./img/ico/icons8-facebook-100.png" alt="Facebook">
               </a>
@@ -220,13 +212,7 @@
                 <img src="./img/ico/icons8-instagram-100.png" alt="Instagram">
               </a>
             </div>
-
-
-            <br>
-            <br>
-
           </div>
-          
         </div>
         <div class="row" >
           <div class="col">
