--- a/Proyecto Final/pages/galery.html
+++ b/Proyecto Final/pages/galery.html
@@ -90,13 +90,9 @@
 
       <!------- MAIN BEGIND---------->
       <main class="container">
-        <div class="row">
-          <br>
-        </div>
   
-        <div class="row">
-          <div class="col"></div>
-          <div class="col-8">
+        <div class="row justify-content-center">
+          <div class="col-8 mt-3">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -186,8 +182,6 @@
               </button>
             </div>
           </div>
-          <div class="col"></div>
-
         </div>
   
         <!------- whatsapp ---------->  
@@ -198,9 +192,6 @@
         
       </main>
       <!------- MAIN END---------->
-
-
-
 
     <!------- FOOTER BEGIND---------->
     <footer class="page-footer bottom-0 font-small bg-dark mb-0">
