--- a/Proyecto Final/pages/rooms.html
+++ b/Proyecto Final/pages/rooms.html
@@ -91,10 +91,8 @@
       <!------- MAIN BEGIND---------->
       <main class="container">
 
-        <div class="row mt-3">
-            <div class="col col-lg-2">
-            </div>
-            <div class="col-md-auto">
+        <div class="row mt-3 justify-content-center">
+          <div class="col-md-auto">
                 <div class="card mb-3" style="max-width: 740px;">
                     <div class="row no-gutters">
                       <div class="col-lg-4">
@@ -155,15 +153,11 @@
         
                     </div>
                 </div>
-            </div>
-            <div class="col col-lg-2"></div>
-
+          </div>
         </div>
 
-        <div class="row">
-            <div class="col col-lg-2"></div>
-
-            <div class="col-md-auto">
+        <div class="row justify-content-center">
+          <div class="col-md-auto">
                 <div class="card mb-3" style="max-width: 740px;">
                     <div class="row no-gutters">
                       <div class="col-lg-4">
@@ -209,25 +203,17 @@
         
                     </div>
                 </div>
-            </div>
-
-
-            <div class="col col-lg-2"></div>
-
+          </div>
         </div>
 
-      <!------- whatsapp ---------->  
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-      <a href="https://api.whatsapp.com/send?phone=+5491135986771&text=Hola%21%20quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20Fincas%20del%20Faldeo." class="float" target="_blank">
-      <i class="fa fa-whatsapp my-float"></i>
-      </a>
-
+        <!------- whatsapp ---------->  
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <a href="https://api.whatsapp.com/send?phone=+5491135986771&text=Hola%21%20quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20Fincas%20del%20Faldeo." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+        </a>
 
       </main>
       <!------- MAIN END---------->
-
-
-
 
     <!------- FOOTER BEGIND---------->
     <footer class="page-footer bottom-0 font-small bg-dark mb-0">
