--- a/Proyecto Final/pages/place.html
+++ b/Proyecto Final/pages/place.html
@@ -93,12 +93,8 @@
     <!------- MAIN BEGIND---------->
     <main class="container">
 
-      <div class="row">
-        <br>
-      </div>
-
-      <div class="row">
-        <div class="col"></div>
+      <div class="row mt-3 justify-content-center">
+        
         <div class="col-8">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -139,12 +135,7 @@
             </button>
           </div>
         </div>
-        <div class="col"></div>
-        <div>
-          <br>
-          <br>
-        </div>
-        <div class="col-12 pt-30 ml-10 mr-10">
+        <div class="col-12 pt-30 ml-10 mr-10 mt-5">
             <p class="place-description font-zen-kurenaido size-20">
               Villa General Belgrano es una localidad especial, con una interesante historia y amplia oferta cultural, arte, muy buena gastronomía,  paisajes increíbles, y variada oferta hotelera de categoría. Situada en el centro de la  República Argentina, en el departamento de Calamuchita, provincia de Córdoba, a solo 88km al sur de la capital provincial y a 750km de la Capital Federal, enmarcada por los cordones de las Sierras Grandes al oeste; de las Sierras Chicas al este y los Embalses de Los Molinos y de Río Tercero, al norte y sur respectivamente. A solo 9km de la ciudad de Santa Rosa, y a 35km de la ciudad de Embalse. 
               Se trata de un pueblo estilo centroeuropeo, con arquitectura típicamente bávara, esto último debido a sus primeros pobladores, inmigrantes de origen preferentemente alemán; le siguieron otros grupos europeos como suizos, italianos, austriacos, que fueron forjando la identidad, la arquitectura y la tradición en el lugar. 
